# mgba-vector

./: CMakeLists.txt  build.sh
include/mgba-util/: formatting.h
src/platform/vector/: CMakeLists.txt  audio.c  audio.h  main.c  video.c  video.h
